# leximask

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: quality-strategy.md
src/leximask/: __init__.py  cli.py  errors.py  logging_utils.py
src/leximask/application/: executor.py  planner.py  reporting.py
src/leximask/devtools/: __init__.py  runtime_project.py  test_runner.py
src/leximask/domain/: casing.py  mapping.py  matcher.py  models.py  path_mapping.py
src/leximask/infrastructure/: digests.py  filesystem.py  ignore_rules.py  plan_store.py  repository_paths.py  sidecar.py
tests/: _path_setup.py  test_devtools.py  test_edge_cases.py  test_mapping.py  test_matcher.py  test_path_mapping.py  test_workflow.py
