[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "leximask"
version = "0.1.0"
description = "Deterministic lexical repository masking with reversible sidecars"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "LexiMask contributors" }]
keywords = ["obfuscation", "masking", "rewrite", "repository", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
]

[project.scripts]
leximask = "leximask.cli:main"

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.13.5",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "coverage[toml]>=7.13.5",
]

[tool.coverage.run]
branch = true
source = ["leximask"]
parallel = true
patch = ["subprocess"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true
exclude_also = [
  "if __name__ == .__main__.:",
]
